🐛 Fix image sizing on small screens

--- a/styles/blog.css
+++ b/styles/blog.css
@@ -33,4 +33,5 @@
 img {
     display: block;
     margin: auto;
+    max-width: 100%;
 }
